--- a/playedu-h5/index.html
+++ b/playedu-h5/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <title>PlayEdu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>CaptainEdu</title>
     <script src="/js/DPlayer.min.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script type="text/javascript">
-      if (
-        typeof WeixinJSBridge == "object" &&
-        typeof WeixinJSBridge.invoke == "function"
-      ) {
-        handleFontSize();
-      } else {
-        if (document.addEventListener) {
-          document.addEventListener(
-            "WeixinJSBridgeReady",
-            handleFontSize,
-            false
-          );
-        } else if (document.attachEvent) {
-          document.attachEvent("WeixinJSBridgeReady", handleFontSize);
-          document.attachEvent("onWeixinJSBridgeReady", handleFontSize);
+        if (
+            typeof WeixinJSBridge == "object" &&
+            typeof WeixinJSBridge.invoke == "function"
+        ) {
+            handleFontSize();
+        } else {
+            if (document.addEventListener) {
+                document.addEventListener(
+                    "WeixinJSBridgeReady",
+                    handleFontSize,
+                    false
+                );
+            } else if (document.attachEvent) {
+                document.attachEvent("WeixinJSBridgeReady", handleFontSize);
+                document.attachEvent("onWeixinJSBridgeReady", handleFontSize);
+            }
         }
-      }
-      function handleFontSize() {
-        // 设置网页字体为默认大小
-        WeixinJSBridge.invoke("setFontSizeCallback", { fontSize: 0 });
-        // 重写设置网页字体大小的事件
-        WeixinJSBridge.on("menu:setfont", function () {
-          WeixinJSBridge.invoke("setFontSizeCallback", { fontSize: 0 });
-        });
-      }
+        function handleFontSize() {
+            // 设置网页字体为默认大小
+            WeixinJSBridge.invoke("setFontSizeCallback", { fontSize: 0 });
+            // 重写设置网页字体大小的事件
+            WeixinJSBridge.on("menu:setfont", function () {
+                WeixinJSBridge.invoke("setFontSizeCallback", { fontSize: 0 });
+            });
+        }
     </script>
-  </body>
+</body>
+
 </html>
